@@ -416,6 +416,78 @@ class TestGrid < Test::Unit::TestCase
   assert_equal(-1,   grid.findOtherCellWith3Nodes(0,1,10,0) )
  end
 
+ def test_BarycentricCoordinate_of_vertices
+  tol =1.0e-14
+  xyz0 = [0,0,0]
+  xyz1 = [1,0,0]
+  xyz2 = [0,1,0]
+  xyz3 = [0,0,1]
+
+  bary = @grid.barycentricCoordinate(xyz0,xyz1,xyz2,xyz3,xyz0)
+  ans = [1.0,0.0,0.0,0.0]
+  4.times { |i| assert_in_delta( ans[i], bary[i], tol, 'element '+i.to_s ) }
+
+  bary = @grid.barycentricCoordinate(xyz0,xyz1,xyz2,xyz3,xyz1)
+  ans = [0.0,1.0,0.0,0.0]
+  4.times { |i| assert_in_delta( ans[i], bary[i], tol, 'element '+i.to_s ) }
+
+  bary = @grid.barycentricCoordinate(xyz0,xyz1,xyz2,xyz3,xyz2)
+  ans = [0.0,0.0,1.0,0.0]
+  4.times { |i| assert_in_delta( ans[i], bary[i], tol, 'element '+i.to_s ) }
+
+  bary = @grid.barycentricCoordinate(xyz0,xyz1,xyz2,xyz3,xyz3)
+  ans = [0.0,0.0,0.0,1.0]
+  4.times { |i| assert_in_delta( ans[i], bary[i], tol, 'element '+i.to_s ) }
+ end
+
+ def test_BarycentricCoordinate_of_center1
+  tol =1.0e-14
+  xyz0 = [0,0,0]
+  xyz1 = [1,0,0]
+  xyz2 = [0,1,0]
+  xyz3 = [0,0,1]
+  target = [0.25,0.25,0.25]
+  bary = @grid.barycentricCoordinate(xyz0,xyz1,xyz2,xyz3,target)
+  ans = [0.25,0.25,0.25,0.25]
+  4.times { |i| assert_in_delta( ans[i], bary[i], tol, 'element '+i.to_s ) }
+ end
+
+ def test_BarycentricCoordinate_of_center2
+  tol =1.0e-14
+  xyz0 = [0,0,0]
+  xyz1 = [4,0,0]
+  xyz2 = [0,4,0]
+  xyz3 = [0,0,4]
+  target = [1.0,1.0,1.0]
+  bary = @grid.barycentricCoordinate(xyz0,xyz1,xyz2,xyz3,target)
+  ans = [0.25,0.25,0.25,0.25]
+  4.times { |i| assert_in_delta( ans[i], bary[i], tol, 'element '+i.to_s ) }
+ end
+
+ def test_BarycentricCoordinate_of_outside_x
+  tol =1.0e-14
+  xyz0 = [0,0,0]
+  xyz1 = [1,0,0]
+  xyz2 = [0,1,0]
+  xyz3 = [0,0,1]
+  target = [2.0,0.0,0.0]
+  bary = @grid.barycentricCoordinate(xyz0,xyz1,xyz2,xyz3,target)
+  ans = [-1.0,2.0,0.0,0.0]
+  4.times { |i| assert_in_delta( ans[i], bary[i], tol, 'element '+i.to_s ) }
+ end
+
+ def test_BarycentricCoordinate_of_oppsite_0
+  tol =1.0e-14
+  xyz0 = [0,0,0]
+  xyz1 = [1,0,0]
+  xyz2 = [0,1,0]
+  xyz3 = [0,0,1]
+  target = [1.0,1.0,1.0]
+  puts bary = @grid.barycentricCoordinate(xyz0,xyz1,xyz2,xyz3,target)
+  ans = [-2.0,1.0,1.0,1.0]
+  4.times { |i| assert_in_delta( ans[i], bary[i], tol, 'element '+i.to_s ) }
+ end
+
  def testGetGem
   grid = Grid.new(5,3,0,0)
   grid.addCell(3,4,0,1)
